--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap");
 
 /*******************************************************
                         Variables
 *******************************************************/
-:root{
-    --primary-color-pink: 322, 100%, 66%;
+:root {
+  --primary-color-pink: 322, 100%, 66%;
 
-    --neatral-Very-Pale-Cyan: 193, 100%, 96%;
-    --neutral-Very-Dark-Cyan: 192, 100%, 9%;
-    --Grayish-Blue: 208, 11%, 55%;
+  --neatral-Very-Pale-Cyan: 193, 100%, 96%;
+  --neutral-Very-Dark-Cyan: 192, 100%, 9%;
+  --Grayish-Blue: 208, 11%, 55%;
 
-    --font-familly-headings-popins:'Poppins', sans-serif;
-    --font-familly-body-calls-opensans: 'Open Sans', sans-serif;
+  --font-familly-headings-popins: "Poppins", sans-serif;
+  --font-familly-body-calls-opensans: "Open Sans", sans-serif;
+
+  --border: 1rem;
 }
 /*******************************************************
                         CSS Reset
@@ -20,60 +21,170 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  /*
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+/*
     2. Remove default margin
   */
-  * {
-    margin: 0;
-  }
-  /*
+* {
+  margin: 0;
+}
+/*
     3. Allow percentage-based heights in the application
   */
-  html, body {
-    height: 100%;
-  }
-  /*
+html,
+body {
+  height: 100%;
+}
+/*
     Typographic tweaks!
     4. Add accessible line-height
     5. Improve text rendering
   */
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  /*
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+/*
     6. Improve media defaults
   */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  /*
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+/*
     7. Remove built-in form typography styles
   */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  /*
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+/*
     8. Avoid text overflows
   */
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
 /*******************************************************
                         Shared CSS
 *******************************************************/
-body{
-    
+body {
+  font-family: var(--font-familly-body-calls-opensans);
+  font-size: 1.125rem;
+  font-weight: 400;
 }
 /*******************************************************
                         Main Css
 *******************************************************/
-
+.grid {
+  display: grid;
+  place-content: center;
+  /* width: 100%;
+    height: 100%; */
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "alias-main"
+    "alias-footer";
+}
 /*******************************************************
-                        Media query Css
+                        Main card Css
 *******************************************************/
+.main-card {
+  grid-area: alias-main;
+  display: grid;
+  /* place-content: center;
+    height: 100%; */
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+    "alias-mainhero"
+    "alias-grow"
+    "alias-flow"
+    "alias-user"
+    "alias-build";
+}
+/*******************************************************
+                        Main hero Css
+*******************************************************/
+.main-hero {
+  grid-area: alias-mainhero;
+  display: grid;
+  grid-template-rows: 0.25fr 1fr;
+  grid-template-areas:
+    "alias-header"
+    "alias-texthero";
+  background: url(/images/bg-hero-mobile.svg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.header {
+  grid-area: alias-header;
+}
+.text-hero {
+  grid-area: alias-texthero;
+}
+/*******************************************************
+                  grow to gether Css
+*******************************************************/
+.growtogether {
+  grid-area: alias-grow;
+  -webkit-box-shadow: 0px 0px 31px -6px #a8a8a8;
+  box-shadow: 0px 0px 31px -6px #a8a8a8;
+  border-radius: var(--border);
+}
+/*******************************************************
+                     flow Css
+*******************************************************/
+.flowing-conv {
+  grid-area: alias-flow;
+  -webkit-box-shadow: 0px 0px 31px -6px #a8a8a8;
+  box-shadow: 0px 0px 31px -6px #a8a8a8;
+  border-radius: var(--border);
+}
+/*******************************************************
+                    Users Css
+*******************************************************/
+.users {
+  grid-area: alias-user;
+  -webkit-box-shadow: 0px 0px 31px -6px #a8a8a8;
+  box-shadow: 0px 0px 31px -6px #a8a8a8;
+  border-radius: var(--border);
+}
+/*******************************************************
+                     Build Css
+*******************************************************/
+.buildcommunity {
+  grid-area: alias-build;
+}
+/*******************************************************
+                     footer Css
+*******************************************************/
+.footer {
+  grid-area: alias-footer;
+}
+/*******************************************************
+                   Media query Css
+*******************************************************/
+@media (min-width: 600px) {
+  body {
+  }
+  .main-hero {
+    background: url(./images/bg-hero-desktop.svg);
+  }
+}
