--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
   /* width: 100%;
     height: 100%; */
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 0.2fr;
   grid-template-areas:
     "alias-main"
     "alias-footer";
@@ -111,7 +111,7 @@ body {
   display: grid;
   /* place-content: center;
     height: 100%; */
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 0.25fr;
   grid-template-areas:
     "alias-mainhero"
     "alias-grow"
@@ -120,7 +120,7 @@ body {
     "alias-build";
 }
 /*******************************************************
-                        Main hero Css
+                   Main hero Css
 *******************************************************/
 .main-hero {
   grid-area: alias-mainhero;
@@ -132,9 +132,14 @@ body {
   background: url(/images/bg-hero-mobile.svg);
   background-size: 100%;
   background-repeat: no-repeat;
+  padding: 2rem;
+
 }
 .header {
   grid-area: alias-header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .text-hero {
   grid-area: alias-texthero;
@@ -147,6 +152,8 @@ body {
   -webkit-box-shadow: 0px 0px 31px -6px #a8a8a8;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
+  padding: 2rem;
+
 }
 /*******************************************************
                      flow Css
@@ -156,6 +163,8 @@ body {
   -webkit-box-shadow: 0px 0px 31px -6px #a8a8a8;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
+  padding: 2rem;
+
 }
 /*******************************************************
                     Users Css
@@ -165,18 +174,24 @@ body {
   -webkit-box-shadow: 0px 0px 31px -6px #a8a8a8;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
+  padding: 2rem;
+
 }
 /*******************************************************
                      Build Css
 *******************************************************/
 .buildcommunity {
   grid-area: alias-build;
+  padding: 2rem;
+
 }
 /*******************************************************
                      footer Css
 *******************************************************/
 .footer {
   grid-area: alias-footer;
+  padding: 2rem;
+
 }
 /*******************************************************
                    Media query Css
