--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
   font-family: var(--font-familly-body-calls-opensans);
   font-size: 1.125rem;
   font-weight: 400;
+  height: 100%;
 }
 /*******************************************************
                         Main Css
@@ -102,6 +103,8 @@ body {
   grid-template-areas:
     "alias-main"
     "alias-footer";
+    /* padding: 2rem; */
+    height: 100%;
 }
 /*******************************************************
                         Main card Css
@@ -118,6 +121,10 @@ body {
     "alias-flow"
     "alias-user"
     "alias-build";
+    padding: 2rem;
+    position: relative;
+    height: 100%;
+    margin-top: 0;
 }
 /*******************************************************
                    Main hero Css
@@ -130,9 +137,12 @@ body {
     "alias-header"
     "alias-texthero";
   background: url(/images/bg-hero-mobile.svg);
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
-  padding: 2rem;
+  /* background-clip: content-box; */
+  background-origin: content-box;
+
+  /* padding: 2rem; */
 
 }
 .header {
@@ -153,7 +163,7 @@ body {
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
   padding: 2rem;
-
+margin: 2rem 0;
 }
 /*******************************************************
                      flow Css
@@ -165,6 +175,7 @@ body {
   border-radius: var(--border);
   padding: 2rem;
 
+margin-bottom: 2rem;
 }
 /*******************************************************
                     Users Css
@@ -175,7 +186,7 @@ body {
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
   padding: 2rem;
-
+  margin-bottom: 2rem;
 }
 /*******************************************************
                      Build Css
@@ -183,15 +194,22 @@ body {
 .buildcommunity {
   grid-area: alias-build;
   padding: 2rem;
-
+  border-radius: var(--border);
+  background-color: hsl(var(--primary-color-pink));
+  position: absolute;
+  bottom: -7.5rem; 
+  margin-top: auto;
+  margin-right: auto;
 }
 /*******************************************************
                      footer Css
 *******************************************************/
 .footer {
+  padding-top: 10rem;
   grid-area: alias-footer;
   padding: 2rem;
-
+  background-color: hsl(var(--neutral-Very-Dark-Cyan));
+  color: white;
 }
 /*******************************************************
                    Media query Css
