--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
   font-family: var(--font-familly-body-calls-opensans);
   font-size: 1.125rem;
   font-weight: 400;
-  height: 100%;
+  /* height: 100dvh; */
 }
 /*******************************************************
                         Main Css
@@ -104,7 +104,7 @@ body {
     "alias-main"
     "alias-footer";
     /* padding: 2rem; */
-    height: 100%;
+    /* height: 100dvh; */
 }
 /*******************************************************
                         Main card Css
@@ -121,7 +121,7 @@ body {
     "alias-flow"
     "alias-user"
     "alias-build";
-    padding: 2rem;
+    /* padding: 2rem; */
     position: relative;
     height: 100%;
     margin-top: 0;
@@ -153,6 +153,10 @@ body {
 }
 .text-hero {
   grid-area: alias-texthero;
+  padding: 2rem;
+}
+.main-hero> img{
+  padding: 2rem;
 }
 /*******************************************************
                   grow to gether Css
@@ -163,7 +167,7 @@ body {
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
   padding: 2rem;
-margin: 2rem 0;
+margin: 2rem ;
 }
 /*******************************************************
                      flow Css
@@ -175,7 +179,7 @@ margin: 2rem 0;
   border-radius: var(--border);
   padding: 2rem;
 
-margin-bottom: 2rem;
+margin: 2rem;
 }
 /*******************************************************
                     Users Css
@@ -186,7 +190,7 @@ margin-bottom: 2rem;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
   padding: 2rem;
-  margin-bottom: 2rem;
+  margin: 2rem;
 }
 /*******************************************************
                      Build Css
@@ -198,8 +202,10 @@ margin-bottom: 2rem;
   background-color: hsl(var(--primary-color-pink));
   position: absolute;
   bottom: -7.5rem; 
-  margin-top: auto;
-  margin-right: auto;
+  right: 30%;
+  left: 30%;
+  
+ 
 }
 /*******************************************************
                      footer Css
@@ -219,5 +225,14 @@ margin-bottom: 2rem;
   }
   .main-hero {
     background: url(./images/bg-hero-desktop.svg);
+  }
+  .buildcommunity{
+    right: auto;
+    left: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer{
+   
   }
 }
