--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
     "alias-main"
     "alias-footer";
     /* padding: 2rem; */
-    /* height: 100dvh; */
+    height: 100dvh;
 }
 /*******************************************************
                         Main card Css
