--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ body {
   border-radius: var(--border);
   padding: 2rem;
 margin: 2rem ;
+display: grid;
+grid-template-rows: 1fr 1fr;
 }
 /*******************************************************
                      flow Css
@@ -181,6 +183,8 @@ margin: 2rem ;
   padding: 2rem;
 
 margin: 2rem;
+display: grid;
+grid-template-rows: 1fr 1fr;
 }
 /*******************************************************
                     Users Css
@@ -192,6 +196,8 @@ margin: 2rem;
   border-radius: var(--border);
   padding: 2rem;
   margin: 2rem;
+  display: grid;
+grid-template-rows: 1fr 1fr;
 }
 /*******************************************************
                      Build Css
@@ -235,16 +241,41 @@ margin: 2rem;
     display: flex;
   }
   .growtogether{
-    display: flex;
-    justify-content: center;
+    display: grid;
+    /* justify-content: center;
     align-items: center;
-    flex-direction: row-reverse;
+    flex-direction: row-reverse; */
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    height: 100dvh;
+    grid-auto-flow: dense;
   }
-  .growtogether> img, .growp-para{
-    flex-basis: 50%;
-    /* max-width: 100%; */
-    /* flex: 1 1 50%; */
-    /* height: auto; */
+  .growtogether> img{
+    grid-column: 2;
+  }
+  .flowing-conv{
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    height: 100dvh;
+  }
+  .growp-para{
+    grid-row: 1;
+    grid-column: 1;
+   
+  }
+  .flowing-conv> img{
+    grid-row: 1;
+    grid-column: 2;
+  }
+  .users{
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    height: 100dvh;
+  }
+  .users> img{
+    grid-column: 2;
   }
   .buildcommunity{
     right: auto;
