--- a/style.css
+++ b/style.css
@@ -89,7 +89,9 @@ body {
   font-size: 1.125rem;
   font-weight: 400;
   height: 100dvh;
+  margin: 0;
 }
+
 /*******************************************************
                         Main Css
 *******************************************************/
@@ -103,8 +105,7 @@ body {
   grid-template-areas:
     "alias-main"
     "alias-footer";
-    /* padding: 2rem; */
-    
+  /* padding: 2rem; */
 }
 /*******************************************************
                         Main card Css
@@ -121,10 +122,10 @@ body {
     "alias-flow"
     "alias-user"
     "alias-build";
-    /* padding: 2rem; */
-    position: relative;
-    height: 100%;
-    margin-top: 0;
+  /* padding: 2rem; */
+  position: relative;
+  height: 100%;
+  margin-top: 0;
 }
 /*******************************************************
                    Main hero Css
@@ -144,7 +145,6 @@ body {
   background-origin: content-box;
 
   /* padding: 2rem; */
-
 }
 .header {
   grid-area: alias-header;
@@ -155,10 +155,12 @@ body {
 .text-hero {
   grid-area: alias-texthero;
   padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.main-hero> img{
-  padding: 2rem;
-}
+
 /*******************************************************
                   grow to gether Css
 *******************************************************/
@@ -168,9 +170,9 @@ body {
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   border-radius: var(--border);
   padding: 2rem;
-margin: 2rem ;
-display: grid;
-grid-template-rows: 1fr 1fr;
+  margin: 2rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 /*******************************************************
                      flow Css
@@ -182,9 +184,9 @@ grid-template-rows: 1fr 1fr;
   border-radius: var(--border);
   padding: 2rem;
 
-margin: 2rem;
-display: grid;
-grid-template-rows: 1fr 1fr;
+  margin: 2rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 /*******************************************************
                     Users Css
@@ -197,7 +199,7 @@ grid-template-rows: 1fr 1fr;
   padding: 2rem;
   margin: 2rem;
   display: grid;
-grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 /*******************************************************
                      Build Css
@@ -208,11 +210,9 @@ grid-template-rows: 1fr 1fr;
   border-radius: var(--border);
   background-color: hsl(var(--primary-color-pink));
   position: absolute;
-  bottom: -7.5rem; 
+  bottom: -7.5rem;
   right: 30%;
   left: 30%;
-  
- 
 }
 /*******************************************************
                      footer Css
@@ -233,72 +233,70 @@ grid-template-rows: 1fr 1fr;
   .main-hero {
     background: url(./images/bg-hero-desktop.svg);
     background-color: hsl(var(--neatral-Very-Pale-Cyan));
-   
+  
   }
-  .header{
-
+  .header {
   }
-  .text-hero{
-    display: flex;
+  .text-hero {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
   .growtogether{
-      display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
+    /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row-reverse; */
    
-    /* display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
-    height: 100dvh;
-    grid-auto-flow: dense; */
-    border: 4px solid yellow;
-   
-  }
-  .image-grow{
-    flex-basis: 50%;
-    border: 3px solid red;
-    height: auto;
-  }
-  .growp-para{
-    flex-basis: 50%;
-    border: 3px solid black;
-    height: auto;
-  }
-  /* .growtogether> img{
-    grid-column: 2;
-  } */
-  .flowing-conv{
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
-    height: 100dvh;
-  }
-  .growp-para{
-    grid-row: 1;
-    grid-column: 1;
-   
-  }
-  .flowing-conv> img{
-    grid-row: 1;
-    grid-column: 2;
-  }
-  .users{
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
-    height: 100dvh;
-  }
-  .users> img{
-    grid-column: 2;
-  }
-  .buildcommunity{
-    right: auto;
-    left: auto;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .footer{
-   
-  }
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr ;
+  height: 100dvh;
+  grid-auto-flow: dense;
+  border: 4px solid yellow;
+  place-content: center;
+ 
+}
+
+.growp-para{
+  flex-basis: 50%;
+  border: 3px solid black;
+  height: auto;
+}
+.growtogether> img{
+  grid-column: 2;
+}
+.flowing-conv{
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  height: 100dvh;
+}
+.growp-para{
+  grid-row: 1;
+  grid-column: 1;
+ 
+}
+.flowing-conv> img{
+  grid-row: 1;
+  grid-column: 2;
+}
+.users{
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  height: 100dvh;
+}
+.users> img{
+  grid-column: 2;
+}
+.buildcommunity{
+  right: auto;
+  left: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer{
+ 
+}
 }
