--- a/style.css
+++ b/style.css
@@ -251,9 +251,9 @@ body {
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr ;
-  height: 100dvh;
+  /* height: 100dvh; */
   grid-auto-flow: dense;
-  border: 4px solid yellow;
+  /* border: 4px solid yellow; */
   place-items: center;
  
 }
@@ -278,10 +278,10 @@ body {
   grid-column: 1;
  
 }
-.flowing-conv> img{
+/* .flowing-conv> img{
   grid-row: 1;
   grid-column: 2;
-}
+} */
 .users{
   display: grid;
   grid-template-rows: 1fr;
@@ -298,6 +298,20 @@ body {
   margin-left: auto;
   margin-right: auto;
   bottom: -4rem;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  box-shadow: 0px 0px 31px -6px #a8a8a8;
+  width: 30rem ;
+  text-align: center;
+}
+.start-free{
+  margin-top: 1rem;
+ background-color: hsl(var(--primary-color-pink));
+ border-radius: 1rem;
+ border: none;
 }
 .footer{
  
