--- a/style.css
+++ b/style.css
@@ -91,7 +91,9 @@ body {
   height: 100dvh;
   margin: 0;
 }
-
+ul{
+  list-style: none;
+}
 /*******************************************************
                         Main Css
 *******************************************************/
@@ -314,6 +316,59 @@ body {
  border: none;
 }
 .footer{
- 
+  padding-top: 7rem;
+ display: flex;
+ justify-content: space-around;
+ flex-direction: column;
+ padding-bottom: 0;
+}
+.logo-footer{
+ background-color:  white;
+}
+.footer_wrapper{
+display: flex;
+justify-content: space-around;
+padding: 4rem;
+padding-bottom: 0;
+}
+.footer-desc, .adivce, .career, .social{
+  flex-basis: 25%;
+}
+.social {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: row;
+  /* border: 2px solid black; */
+  min-width: 30%;
+  gap: 1rem;
+}
+.social > a {
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid white;
+  border-radius: 50%;
+  
+}
+.social> i{
+  color: white;
+  
+}
+.social > a:hover {
+  cursor: pointer;
+  border: 2px solid var(--Soft-Magenta);
+  color: var(--Soft-Magenta);
+}
+.copyright{
+  display: flex;
+justify-content: flex-end;
+}
+.attribution{
+ display: flex;
+ justify-content: center;
 }
 }
