--- a/style.css
+++ b/style.css
@@ -175,6 +175,14 @@ ul {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
+  padding-top: 6rem;
+}
+.hero-para{
+  padding-bottom: 4rem;
+}
+.front-paragraph{
+  padding-bottom: 2rem ;
 }
 .main-title {
   font-size: 2rem;
@@ -188,6 +196,12 @@ ul {
   min-width: 20rem;
   min-height: 3rem;
   font-weight: 400;
+  color: white;
+  transition: all 0.3s ease-out;
+}
+.starting:hover{
+  cursor: pointer;
+  transform: scale(1.1);
 }
 /*******************************************************
                   grow to gether Css
@@ -236,11 +250,45 @@ ul {
   grid-area: alias-build;
   padding: 2rem;
   border-radius: var(--border);
-  background-color: hsl(var(--primary-color-pink));
+  background-color: white;
   position: absolute;
   bottom: -7.5rem;
   right: 30%;
   left: 30%;
+  box-shadow: 0px 0px 31px -6px #a8a8a8;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+}
+/* .buildcommunity {
+  /* right: auto;
+left: auto; 
+position: absolute;
+grid-area: alias-build;
+border-radius: var(--border);
+  margin-left: auto;
+  margin-right: auto;
+  bottom: -7.5rem;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  box-shadow: 0px 0px 31px -6px #a8a8a8;
+  width: 30rem;
+  text-align: center;
+} */
+.start-free {
+  margin-top: 1rem;
+  background-color: hsl(var(--primary-color-pink));
+  border-radius: 1rem;
+  border: none;
+transition: all 0.3s ease-out;
+}
+.start-free:hover{
+  cursor: pointer;
+  transform: scale(1.1);
 }
 /*******************************************************
                      footer Css
@@ -251,6 +299,46 @@ ul {
   padding: 2rem;
   background-color: hsl(var(--neutral-Very-Dark-Cyan));
   color: white;
+  padding-top: 10rem;
+  row-gap: 2rem;
+}
+/* .footer_wrapper{
+  row-gap: 5rem;
+} */
+.social {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: row;
+  /* border: 2px solid black; */
+  min-width: 30%;
+  gap: 1rem;
+ 
+}
+.social > a {
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid white;
+  border-radius: 50%;
+  transition: all 0.3s ease-out;
+}
+
+.social > a:hover {
+  cursor: pointer;
+transform: scale(1.1);
+}
+.adivce, .career {
+  padding-left: 0;
+ 
+}
+.copyright{
+ display: flex;
+ justify-content: center;
+ padding: 2rem 0;
 }
 /*******************************************************
                    Media query Css
@@ -287,8 +375,8 @@ ul {
     grid-auto-flow: dense;
     /* border: 4px solid yellow; */
     place-items: center;
-    margin:  5rem;
-    margin-bottom: 2rem;
+    /* margin:  5rem;
+    margin-bottom: 2rem; */
   }
 
   /* .growp-para{
@@ -308,9 +396,9 @@ ul {
     grid-template-columns: 1fr 1fr;
     /* height: 100dvh; */
     place-items: center;
-    margin:  5rem;
+    /* margin:  5rem;
     margin-top: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 2rem; */
   }
   .growp-para {
     grid-row: 1;
@@ -329,8 +417,8 @@ ul {
     grid-template-columns: 1fr 1fr;
     /* height: 100dvh; */
     place-items: center;
-    margin:  5rem;
-    margin-top: 0;
+    /* margin:  5rem;
+    margin-top: 0; */
   }
   .users > img {
     grid-column: 2;
@@ -371,12 +459,24 @@ ul {
   }
   .logo-footer {
     color: white;
+    padding-bottom: 2rem;
   }
   .footer_wrapper {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding: 4rem;
     padding-bottom: 0;
+    border: 4px solid red;
+    flex-shrink: 1;
+  }
+  /* .footer-desciption{
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+  } */
+  .footer-desc{
+    align-items: center;
   }
   .footer-desc,
   .adivce,
@@ -388,7 +488,28 @@ ul {
   .phone,
   .mail {
     display: flex;
-    flex: 1;
+    /* flex-grow: 1; */
+    padding-bottom: 1rem;
+  }
+  .adivce,
+  .career{
+    padding-left: 6rem;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .adivce,
+  .career,
+  .social{
+    display: flex;
+  justify-content: center;
+  align-items: start;
+  }
+  .phone, .mail{
+    height: 7%;
+  }
+  .foot-img{
+    transform: scale(0.9);
+    padding-right: 1rem;
   }
   .social {
     display: flex;
@@ -398,6 +519,7 @@ ul {
     /* border: 2px solid black; */
     min-width: 30%;
     gap: 1rem;
+    
   }
   .social > a {
     color: white;
