--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ ul {
   transform: scale(1.1);
 }
 /*******************************************************
-                  grow to gether Css
+                  grow together Css
 *******************************************************/
 .growtogether {
   grid-area: alias-grow;
@@ -266,14 +266,15 @@ ul {
   border-radius: var(--border);
   background-color: white;
   position: absolute;
-  bottom: -7.5rem;
-  right: 30%;
-  left: 30%;
+  bottom: -6.5rem;
+  right: 10%;
+  left: 10%;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   display: flex;
   justify-content: center;
   align-content: center;
   flex-direction: column;
+  text-align: center;
 }
 /* .buildcommunity {
   /* right: auto;
@@ -296,13 +297,14 @@ border-radius: var(--border);
 .start-free {
   margin-top: 1rem;
   background-color: hsl(var(--primary-color-pink));
-  border-radius: 1rem;
+  border-radius: 2rem;
   border: none;
 transition: all 0.3s ease-out;
+height: 3rem;
 }
 .start-free:hover{
   cursor: pointer;
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 /*******************************************************
                      footer Css
@@ -316,9 +318,29 @@ transition: all 0.3s ease-out;
   padding-top: 10rem;
   row-gap: 2rem;
 }
-/* .footer_wrapper{
-  row-gap: 5rem;
+.logo-footer{
+padding-bottom: 1rem;
+}
+.footer_wrapper{
+  gap: 5rem;
+}
+/* .footer-desc{
+display: flex;
+justify-content: flex-start;
+flex-direction: column;
 } */
+.footer-desciption, .phone, .mail{
+  display: flex;
+  padding-bottom: 1rem;
+}
+.foot-img{
+  width: 30px;
+  height: 30px;
+  padding-right: 1rem;
+}
+.adivce >li, .career >li{
+  padding-bottom: 1rem;
+}
 .social {
   display: flex;
   justify-content: center;
@@ -327,7 +349,7 @@ transition: all 0.3s ease-out;
   /* border: 2px solid black; */
   min-width: 30%;
   gap: 1rem;
- 
+ color: white;
 }
 .social > a {
   color: white;
@@ -482,7 +504,7 @@ transform: scale(1.1);
     padding: 4rem;
     padding-bottom: 0;
     /* border: 4px solid red; */
-    flex-shrink: 1;
+    /* flex-shrink: 1; */
   }
   /* .footer-desciption{
     flex-direction: column;
