--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   font-family: var(--font-familly-body-calls-opensans);
   font-size: 1.125rem;
   font-weight: 400;
-  height: 100dvh;
+  min-height: 100dvh;
   margin: 0;
 }
 ul {
@@ -111,27 +111,27 @@ ul {
 /*******************************************************
                         Main Css
 *******************************************************/
-.grid {
+/* .grid {
   display: grid;
   place-content: center;
   /* width: 100%;
-    height: 100%; */
+    height: 100%; 
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 0.2fr;
   grid-template-areas:
     "alias-main"
     "alias-footer";
-  /* padding: 2rem; */
-}
+  /* padding: 2rem; 
+} */
 /*******************************************************
                         Main card Css
 *******************************************************/
 .main-card {
-  grid-area: alias-main;
+  /* grid-area: alias-main; */
   display: grid;
   /* place-content: center;
     height: 100%; */
-  grid-template-rows: 1fr 1fr 1fr 1fr 0.25fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 0.25fr ;
   grid-template-areas:
     "alias-mainhero"
     "alias-grow"
@@ -140,7 +140,7 @@ ul {
     "alias-build";
   /* padding: 2rem; */
   position: relative;
-  height: 100%;
+ 
   margin-top: 0;
 }
 /*******************************************************
@@ -159,7 +159,7 @@ ul {
   background-color: hsl(var(--neatral-Very-Pale-Cyan));
   /* background-clip: content-box; */
   background-origin: content-box;
-
+  
   /* padding: 2rem; */
 }
 .header {
@@ -256,6 +256,7 @@ ul {
   margin: 2rem;
   display: grid;
   grid-template-rows: 1fr 1fr;
+ 
 }
 /*******************************************************
                      Build Css
@@ -266,7 +267,7 @@ ul {
   border-radius: var(--border);
   background-color: white;
   position: absolute;
-  bottom: -6.5rem;
+  bottom: -5rem;
   right: 10%;
   left: 10%;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
@@ -317,6 +318,7 @@ height: 3rem;
   color: white;
   padding-top: 10rem;
   row-gap: 2rem;
+  
 }
 .logo-footer{
 padding-bottom: 1rem;
@@ -488,7 +490,7 @@ transform: scale(1.1);
   *******************************************************/
   .footer {
     padding-top: 4rem;
-    display: flex;
+    /* display: flex; */
     justify-content: space-around;
     flex-direction: column;
     padding-bottom: 0;
