--- a/style.css
+++ b/style.css
@@ -102,35 +102,19 @@ body {
   font-family: var(--font-familly-body-calls-opensans);
   font-size: 1.125rem;
   font-weight: 400;
-  min-height: 100dvh;
+  /* min-height: 100dvh; */
   margin: 0;
 }
 ul {
   list-style: none;
+  padding-left: 0;
 }
-/*******************************************************
-                        Main Css
-*******************************************************/
-/* .grid {
-  display: grid;
-  place-content: center;
-  /* width: 100%;
-    height: 100%; 
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 0.2fr;
-  grid-template-areas:
-    "alias-main"
-    "alias-footer";
-  /* padding: 2rem; 
-} */
+
 /*******************************************************
                         Main card Css
 *******************************************************/
 .main-card {
-  /* grid-area: alias-main; */
   display: grid;
-  /* place-content: center;
-    height: 100%; */
   grid-template-rows: 1fr 1fr 1fr 1fr 0.25fr ;
   grid-template-areas:
     "alias-mainhero"
@@ -138,10 +122,7 @@ ul {
     "alias-flow"
     "alias-user"
     "alias-build";
-  /* padding: 2rem; */
   position: relative;
- 
-  margin-top: 0;
 }
 /*******************************************************
                    Main hero Css
@@ -157,7 +138,6 @@ ul {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: hsl(var(--neatral-Very-Pale-Cyan));
-  /* background-clip: content-box; */
   background-origin: content-box;
   
   /* padding: 2rem; */
@@ -272,36 +252,19 @@ ul {
   left: 10%;
   box-shadow: 0px 0px 31px -6px #a8a8a8;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-content: center;
   flex-direction: column;
   text-align: center;
 }
-/* .buildcommunity {
-  /* right: auto;
-left: auto; 
-position: absolute;
-grid-area: alias-build;
-border-radius: var(--border);
-  margin-left: auto;
-  margin-right: auto;
-  bottom: -7.5rem;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  box-shadow: 0px 0px 31px -6px #a8a8a8;
-  width: 30rem;
-  text-align: center;
-} */
+
 .start-free {
   margin-top: 1rem;
   background-color: hsl(var(--primary-color-pink));
   border-radius: 2rem;
   border: none;
-transition: all 0.3s ease-out;
-height: 3rem;
+  transition: all 0.3s ease-out;
+  height: 3rem;
 }
 .start-free:hover{
   cursor: pointer;
@@ -320,29 +283,23 @@ height: 3rem;
   row-gap: 2rem;
   
 }
-.logo-footer{
-padding-bottom: 1rem;
-}
-.footer_wrapper{
-  gap: 5rem;
-}
-/* .footer-desc{
-display: flex;
-justify-content: flex-start;
-flex-direction: column;
-} */
-.footer-desciption, .phone, .mail{
+.footer-desciption, .mail, .phone{
   display: flex;
   padding-bottom: 1rem;
+}
+.logo-footer{
+padding-bottom: 1rem;
 }
 .foot-img{
   width: 30px;
   height: 30px;
   padding-right: 1rem;
-}
-.adivce >li, .career >li{
+} 
+.advice >li {
   padding-bottom: 1rem;
 }
+
+
 .social {
   display: flex;
   justify-content: center;
@@ -369,10 +326,7 @@ flex-direction: column;
   cursor: pointer;
 transform: scale(1.1);
 }
-.adivce, .career {
-  padding-left: 0;
- 
-}
+
 .copyright{
  display: flex;
  justify-content: center;
@@ -382,8 +336,7 @@ transform: scale(1.1);
                    Media query Css
 *******************************************************/
 @media (min-width: 600px) {
-  body {
-  }
+  
   .main-hero {
     background: url(./images/bg-hero-desktop.svg);
     background-color: hsl(var(--neatral-Very-Pale-Cyan));
@@ -401,30 +354,12 @@ transform: scale(1.1);
                   grow to gether Css
   *******************************************************/
   .growtogether {
-    /* display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row-reverse; */
-
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
-    /* height: 100dvh; */
     grid-auto-flow: dense;
-    /* border: 4px solid yellow; */
     place-items: center;
-    /* margin:  5rem;
-    margin-bottom: 2rem; */
   }
-
-  /* .growp-para{
-  flex-basis: 50%;
-  border: 3px solid black;
-  height: auto;
-} */
-  /* .growtogether> img{
-  grid-column: 2;
-} */
   /*******************************************************
                      flow Css
   *******************************************************/
@@ -432,20 +367,13 @@ transform: scale(1.1);
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
-    /* height: 100dvh; */
     place-items: center;
-    /* margin:  5rem;
-    margin-top: 0;
-    margin-bottom: 2rem; */
   }
   .growp-para {
     grid-row: 1;
     grid-column: 1;
   }
-  /* .flowing-conv> img{
-  grid-row: 1;
-  grid-column: 2;
-} */
+
   /*******************************************************
                     Users Css
   *******************************************************/
@@ -453,10 +381,7 @@ transform: scale(1.1);
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
-    /* height: 100dvh; */
     place-items: center;
-    /* margin:  5rem;
-    margin-top: 0; */
   }
   .users > img {
     grid-column: 2;
@@ -465,8 +390,6 @@ transform: scale(1.1);
                      Build Css
   *******************************************************/
   .buildcommunity {
-    /* right: auto;
-  left: auto; */
     margin-left: auto;
     margin-right: auto;
     bottom: -4rem;
@@ -488,31 +411,32 @@ transform: scale(1.1);
   /*******************************************************
                      footer Css
   *******************************************************/
-  .footer {
+  /* .footer {
     padding-top: 4rem;
-    /* display: flex; */
     justify-content: space-around;
-    flex-direction: column;
+    flex-direction: row;
     padding-bottom: 0;
-  }
-  .logo-footer {
-    color: white;
-    padding-bottom: 2rem;
-  }
-  .footer_wrapper {
+  } */
+  
+   .footer_wrapper {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 4rem;
     padding-bottom: 0;
-    /* border: 4px solid red; */
-    /* flex-shrink: 1; */
   }
-  /* .footer-desciption{
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-  } */
+  .footer-desc, .navigation, .social{
+    flex-basis: 33.33%;
+  }
+  .navigation {
+    columns: 2;
+  }
+  /* 
+  .logo-footer {
+    color: white;
+    padding-bottom: 2rem;
+  }
+ 
   .footer-desc{
     align-items: center;
   }
@@ -526,8 +450,7 @@ transform: scale(1.1);
   .phone,
   .mail {
     display: flex;
-    /* flex-grow: 1; */
-    padding-bottom: 1rem;
+     padding-bottom: 1rem;
   }
   .adivce,
   .career{
@@ -550,7 +473,7 @@ transform: scale(1.1);
     width: 30px;
     height: 30px;
     padding-right: 1rem;
-  }
+  } */
   .social {
     display: flex;
     justify-content: center;
